--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "dev": "next dev -p 3000",
     "build": "next build",
-    "start": "next start -p 3601",
-    "lint": "next lint"
+    "start": "next start -p 3101",
+    "lint": "next lint",
+    "publish:tunnel": "bash ops/publish-cloudflared.sh"
   },
   "dependencies": {
     "next": "14.2.5",
